@@ -227,6 +227,8 @@ Or, alternately, using the ``set`` tag:
 Utilising ``select_related`` to improve efficiency
 --------------------------------------------------
 
+.. versionadded:: 2.9
+
 For models with foreign key relationships to other objects (e.g. pages),
 which are very often needed to output values in templates, you can set
 the ``select_related`` attribute on your model to have Wagtail utilise
@@ -264,5 +266,55 @@ and two more to fetch each page):
 
 .. code-block:: html
 
-    {{ settings.app_label.ImportantPages.donate_page.url }}
-    {{ settings.app_label.ImportantPages.sign_up_page.url }}
+    {% load wagtailcore_tags %}
+    {% pageurl settings.app_label.ImportantPages.donate_page %}
+    {% pageurl settings.app_label.ImportantPages.sign_up_page %}
+
+
+Utilising the ``page_url`` setting shortcut
+-------------------------------------------
+
+.. versionadded:: 2.10
+
+If, like in the previous section, your settings model references pages,
+and you regularly need to output the URLs of those pages in your project,
+you can likely use the setting model's ``page_url`` shortcut to do that more
+cleanly. For example, instead of doing the following:
+
+.. code-block:: html
+
+    {% load wagtailcore_tags %}
+    {% pageurl settings.app_label.ImportantPages.donate_page %}
+    {% pageurl settings.app_label.ImportantPages.sign_up_page %}
+
+You could write:
+
+.. code-block:: html
+
+    {{ settings.app_label.ImportantPages.page_url.donate_page }}
+    {{ settings.app_label.ImportantPages.page_url.sign_up_page }}
+
+Using the ``page_url`` shortcut has a few of advantages over using the tag:
+
+1.  The 'specific' page is automatically fetched to generate the URL,
+    so you don't have to worry about doing this (or forgetting to do this)
+    yourself.
+2.  The results are cached, so if you need to access the same page URL
+    in more than one place (e.g. in a form and in footer navigation), using
+    the ``page_url`` shortcut will be more efficient.
+3.  It's more concise, and the syntax is the same whether using it in templates
+    or views (or other Python code), allowing you to write more more consistent
+    code.
+
+When using the ``page_url`` shortcut, there are a couple of points worth noting:
+
+1.  The same limitations that apply to the `{% pageurl %}` tag apply to the
+    shortcut: If the settings are accessed from a template context where the
+    current request is not available, all URLs returned will include the
+    site's scheme/domain, and URL generation will not be quite as efficient.
+2.  If using the shortcut in views or other Python code, the method will
+    raise an ``AttributeError`` if the attribute you request from ``page_url``
+    is not an attribute on the settings object.
+3.  If the settings object DOES have the attribute, but the attribute returns
+    a value of ``None`` (or something that is not a ``Page``), the shortcut
+    will return an empty string.
